<resources>
    <string name="app_name">Minesweeper</string>
    <string name="time">⏱️Time: %1$02d:%2$02d</string>
    <string name="flags">🚩Flags: %1$d</string>
    <string name="hint">💡Hint</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="play_again"> Play\n Again\n🔄</string>
    <string name="return_home">Return \nHome\n🏠</string>
    <string name="you_win">You Win! 😎</string>
    <string name="game_over">Game Over! ☹️</string>
    <string name="your_time">Time: %1$02d:%2$02d</string>
    <string name="best">Best: %1$02d:%2$02d</string>
    <string name="no_high_score">Best: —:—</string>
    <string name="start">Start</string>
    <string name="restart">🔄Restart</string>
</resources>
